--- a/frontend/my-react-app/src/components/pages/XploitcraftPage/App.css
+++ b/frontend/my-react-app/src/components/pages/XploitcraftPage/App.css
@@ -66,7 +66,7 @@
   justify-content: center;
 }
 
-.generate-button {
+.generate-button-xploit {
   background-color: #660000;
   color: #ffffff;
   padding: 0.75rem 1.875rem;
